# llvm-arithmetic-expression-language

./: .clangd  .gitignore  README.md
frontend/: CMakeLists.txt
frontend/src/: .clangd  CMakeLists.txt  Lexer.cpp  Lexer.hpp
frontend/test/: .clangd  CMakeLists.txt  test_lexer.cpp
